--- a/src/app/e-list-seances/e-list-seances.component.css
+++ b/src/app/e-list-seances/e-list-seances.component.css
@@ -2,6 +2,9 @@
 .btn.active {                
 	display: none;		
 }
+#rating{
+margin-bottom: 2%;
+}
 
 .btn span:nth-of-type(1)  {            	
 	display: none;
@@ -94,4 +97,16 @@ input[type=radio]:checked + label, input[type=checkbox]:checked + label{
   background-color:  rgb(122, 175, 22);
    color: white;
 
+}
+.label-value{
+  font-size: 25px;
+ /* line-height: 25px;*/
+  margin-left: 5%;
+}
+#commentaire{
+  font: 400 50px/0.8 'Cookie', Helvetica, sans-serif;
+color: black;
+text-shadow: 4px 4px 3px rgba(0,0,0,0.1); 
+font-style: italic;
+text-align: left;
 }
